# LVGL-PC

./: .gitignore  Eye.c  Eye.h  LVGL_UI.c  LVGL_UI.h  LittlevGL.cbp  LittlevGL.layout  lv_conf.h  main.c  创建模拟器.txt  模板演示.c
Src/: Desktop.c  Desktop.h  Eye.c  Eye.h  Face.c  Face.h  Image.c  Image.h  Meter.c  Meter.h
Src/pvz_project/main/: main.c
Src/pvz_project/main/gui/: pvz.c
UI/: CMakeLists.txt  Lists.txt  MainUI.c  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
UI/components/: ui_comp_hook.c
UI/images/: ui_img_akf_bg_png.c  ui_img_akf_gg_png.c  ui_img_akf_line_png.c  ui_img_akf_png.c  ui_img_bg_png.c  ui_img_bgg_png.c  ui_img_centerindec_png.c  ui_img_mainindector_png.c  ui_img_secondbg_png.c  ui_img_secondindec_png.c  ui_img_smallindecotr_1_png.c  ui_img_smallpoint_png.c  ui_img_smallpoint_white_png.c  ui_img_triangle_png.c
UI/screens/: ui_BoostModeA.c  ui_BoostModeB.c  ui_Screen1.c
lv_drivers/win32drv/: win32drv.c
lvgl/: lvgl.h
lvgl/src/font/: lv_font_montserrat_22.c
lvgl/src/misc/: lv_fs.c  lv_tlsf.c
